style: add style to header element and child elements

--- a/src/template.html
+++ b/src/template.html
@@ -5,12 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Page</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            /* border: 1px red solid; */
+        }
+
+        header {
+            background-color: rgb(219, 219, 124);
+        }
+
+        .logo {
+            text-align: center;
+            padding: 1rem;
+            font-size: clamp(1.4rem, 3vw, 3rem);
+        }
+
+        .nav-btns {
+            display: flex;
+            justify-content: space-around;
+            padding: 1rem;
+        }
+
+        button {
+            padding: 1vw 2vw;
+            font-size: clamp(1rem, 1.6vw, 1.8rem);
+            background-color: transparent;
+            border: none;
+        }
+    </style>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <h1>Abyssinia Cofee</h1>
+            <h1>Abyssinia Coffee</h1>
         </div>
         <div class="nav-btns">
             <nav>
