feat: add class names and style body element

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,11 @@
             /* border: 1px red solid; */
         }
 
+        body {
+            width: 100%;
+            min-height: 100vh;
+        }
+
         header {
             background-color: rgb(219, 219, 124);
         }
@@ -45,13 +50,13 @@
         </div>
         <div class="nav-btns">
             <nav>
-                <button>Home</button>
+                <button class="home">Home</button>
             </nav>
             <nav>
-                <button>Menu</button>
+                <button class="menu">Menu</button>
             </nav>
             <nav>
-                <button>About</button>
+                <button class="about">About</button>
             </nav>
         </div>
     </header>
