--- a/src/template.html
+++ b/src/template.html
@@ -14,13 +14,13 @@
         </div>
         <div class="nav-btns">
             <nav>
-                <button class="home">Home</button>
+                <button class="nav-btn home">Home</button>
             </nav>
             <nav>
-                <button class="menu">Menu</button>
+                <button class="nav-btn menu">Menu</button>
             </nav>
             <nav>
-                <button class="about">About</button>
+                <button class="nav-btn about">About</button>
             </nav>
         </div>
     </header>
